-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 22
-
Component/s: hotspot
-
b12
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8327977 | 22.0.2 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
| JDK-8327976 | 21.0.4 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
| JDK-8329388 | 17.0.12 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
| JDK-8329567 | 11.0.24 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
| JDK-8329877 | openjdk8u422 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
| JDK-8360691 | shenandoah8u422 | Suchismith Roy | P4 | Resolved | Fixed | b01 |
Error log: dcstartup Issue: Could not find agent library am_ibm_16 on the library path, with error: libam_ibm_16.so
The agentlib calls native jvm agent code, which does a dll_load to load the library files. OpenJDK hotspot can only load libraries with .so extension and throws an error when libraries have .a extension.
Solution :
Providing an alternate path for loading shared objects with .a extension.
If the loading of a shared object ,for e.g obj.so, fails, we check if there is an archive file with the same filename i.e obj.a and perform the loading again.
- backported by
-
JDK-8327976 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
-
JDK-8327977 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
-
JDK-8329388 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
-
JDK-8329567 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
-
JDK-8329877 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
-
JDK-8360691 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-
- causes
-
JDK-8334217 [AIX] Misleading error messages after JDK-8320005
-
- Resolved
-
- relates to
-
JDK-8320830 [AIX] Dont mix os::dll_load() with direct dlclose() calls
-
- Resolved
-
-
JDK-8320890 [AIX] Find a better way to mimic dl handle equality
-
- Resolved
-
-
JDK-8331791 [8u] AIX build break from JDK-8320005 backport
-
- Resolved
-
-
JDK-8319516 AIX System::loadLibrary needs support to load a shared library from an archive object
-
- Closed
-
- links to
-
Commit
openjdk/jdk8u-dev/c1c8064e
-
Commit
openjdk/jdk11u-dev/6808c5c8
-
Commit
openjdk/jdk17u-dev/45de6852
-
Commit
openjdk/jdk21u-dev/c80be84c
-
Commit
openjdk/jdk22u/2e5c300b
-
Commit
openjdk/jdk/e85355ad
-
Review
openjdk/jdk8u-dev/473
-
Review
openjdk/jdk11u-dev/2622
-
Review
openjdk/jdk17u-dev/2271
-
Review
openjdk/jdk17u-dev/2326
-
Review
openjdk/jdk17u-dev/2332
-
Review
openjdk/jdk21u-dev/335
-
Review
openjdk/jdk22u/87
-
Review
openjdk/jdk/16604