8320005: Allow loading of shared objects with .a extension on AIX

Reviewed-by: amitkumar, stuefe, jkern, mdoerr